[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replit_msg_sender"
version = "1.0.0"
description = "Cryptocurrency monitoring and alerting system"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "flask>=3.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
start = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
